--- a/backend/Views/index.ejs
+++ b/backend/Views/index.ejs
@@ -1,17 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Fui renderizado</h1>
-    <form action="/" method="post">
-        <label for="cliente">Nome:</label>
-        <input type="text" name="cliente">
-        <button>Enviar</button>
-    </form>
-    <script src="./assets/js/bundle.js"></script>
-</body>
-</html>
+<%- include('includes/head') %>
+<%- include('includes/nav') %>
+
+<div class="container">
+  <div class="col-lg-2"></div>
+
+  <div class="col-lg-8 my-5">
+    <h1 class="text-center">Agenda</h1>
+    <p class="text-center lead">Adicione seus contatos!</p>
+ 
+  </div>
+<%- include('includes/messages') %>
+
+  <% if(contatos.length > 0) {%>
+  <div class="responsive-table">
+    <table class="table my-3">
+      <% contatos.forEach(contato => {%>
+        <tr>
+            <td><%= contato.nome %></td>
+            <td><%= contato.sobrenome %></td>
+            <td><%= contato.email %></td>
+            <td><%= contato.telefone %></td>
+            <td><a href="/contato/index/<%= contato._id%>">Editar</a></td>
+            <td><a class="text-danger" href="/contato/delete/<%= contato._id%>">Deletar</a></td>
+        </tr> 
+       
+      <%})%>
+       
+    </table>
+  </div>
+  <% }else { %>
+      <p class="text-center lead">Sem contatos adicionados!</p>
+    <% } %>
+
+  <div class="col-lg-2"></div>
+</div>
+
+<%- include('includes/footer') %>
